fix: allow horizontal scrolling when needed in errors tab

--- a/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
@@ -20,7 +20,7 @@
   margin-top: 0;
   height: 100%;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
   box-sizing: border-box;
 }
 
